--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "~3.3.2",
+    "angular": "~1.3.14",
+    "flat-ui": "~2.2.2"
+  }
 }
