--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Developed for BattleHack LA",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/teamdignity/dignity-app/issues"
   },
-  "homepage": "https://github.com/teamdignity/dignity-app"
+  "homepage": "https://github.com/teamdignity/dignity-app",
+  "dependencies": {
+    "express": "^4.12.0"
+  }
 }
