--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/teamdignity/dignity-app",
   "dependencies": {
-    "express": "^4.12.0"
+    "express": "^4.12.0",
+    "sequelize": "^2.0.3"
   }
 }
