--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "load-sample-data": "node models/sample_data/sample_data_loader.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,8 @@
   "homepage": "https://github.com/teamdignity/dignity-app",
   "dependencies": {
     "express": "^4.12.0",
+    "pg": "^4.3.0",
+    "pg-hstore": "^2.3.1",
     "sequelize": "^2.0.3"
   }
 }
