--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bootstrap": "~3.3.2",
     "angular": "~1.3.14",
-    "flat-ui": "~2.2.2"
+    "flat-ui": "~2.2.2",
+    "angular-ui-router": "~0.2.13"
   }
 }
