--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/teamdignity/dignity-app",
   "dependencies": {
     "express": "^4.12.0",
+    "mongoose": "^3.8.24",
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.1",
     "sequelize": "^2.0.3"
