--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/teamdignity/dignity-app",
   "dependencies": {
+    "braintree": "^1.23.0",
     "express": "^4.12.0",
     "mongoose": "^3.8.24",
     "pg": "^4.3.0",
